--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -17,11 +17,15 @@
   font-style: normal;
 }
 
+.border-header {
+  border-color: #500950;
+}
+
 .dropdown-menu-arrow::before {
   content: "";
   position: absolute;
   top: -5px;
-  left: calc(95% - 12px);
+  right: 9px;
   border-width: 0 5px 5px 5px;
   border-style: solid;
   border-color: transparent transparent white transparent;
@@ -37,17 +41,17 @@
 
 .round-image-padding {
   border-radius: 50%;
-  border: 1.5px solid #fff;
-  padding: 4px;
+  border: 2px solid #fff;
+  padding: 2px;
 }
 
 .img-down-arrow::after {
   content: "";
   position: absolute;
-  right: -10px;
-  top: 45%;
+  right: -11px;
+  top: 49%;
   transform: translateY(-50%);
-  border-width: 3px 3px 0 3px;
+  border-width: 4px 4px 0 4px;
   border-color: white transparent transparent transparent;
   border-style: solid;
 }
@@ -60,7 +64,7 @@
     #340e33,
     #010101
   );
-  height: 225px;
+  height: 250px;
 }
 
 .em-puurple {
