--- a/lib/oliveira_victor_p_web/components/layouts/app.html.heex
+++ b/lib/oliveira_victor_p_web/components/layouts/app.html.heex
@@ -1,133 +1,140 @@
-<header class="flex justify-between items-center px-6 py-3 em-puurple">
-  <div class="flex relative">
-    <a href={~p"/"} class="mr-1">
-      <Heroicons.LiveView.icon name="beaker" type="solid" class="h-8 w-8" alt="Logo" />
-    </a>
-    <a href={~p"/"} class="mr-6">
-      <div class="text-white font-brand font-bold text-3xl">oliveiravictorp</div>
-    </a>
-  </div>
-  <div class="relative">
-    <a href={~p"/"} class="mt-2 mr-3 text-white text-[1rem] font-brand font-bold hover:text-emDark-light">
-      Home
-    </a>
-    <a href={~p"/about"} class="mt-2 mr-3 text-white text-[1rem] font-brand font-bold hover:text-emDark-light">
-      Sobre mim
-    </a>
-    <a href={~p"/projects"} class="mt-2 mr-3 text-white text-[1rem] font-brand font-bold hover:text-emDark-light">
-      Projetos
-    </a>
-    <a href={~p"/blog"} class="mt-2 mr-3 text-white text-[1rem] font-brand font-bold hover:text-emDark-light">
-      Blog
-    </a>
-    <a href={~p"/freeMaterials"} class="mt-2 mr-3 text-white text-[1rem] font-brand font-bold hover:text-emDark-light">
-      Materiais Gratuitos
-    </a>
-    <a href={~p"/studyHall"} class="mt-2 mr-3 text-white text-[1rem] font-brand font-bold hover:text-emDark-light">
-      Sala de estudos
-    </a>
-    <a href={~p"/talkToMe"} class="mt-2 mr-3 text-white text-[1rem] font-brand font-bold hover:text-emDark-light">
-      Fale comigo
-    </a>
-  </div>
-  <div class="relative">
-    <button phx-click={JS.dispatch("toogle-darkmode")}>
-      <Heroicons.LiveView.icon name="moon" type="solid" class="h-8 w-8" alt="Logo" />
-    </button>
-    <input
-      type="text"
-      class="rounded-lg focus:outline-none focus:border-emLavender focus:ring-0 px-3 py-1 bg-emDark-dark placeholder-emDark-light text-white font-brand font-regular text-sm mr-5 border-white"
-      placeholder="Search..."
-    />
-    <button class="img-down-arrow" type="button" id="user-menu-button" phx-click={LiveGistWeb.Layouts.App.toggle_dropdown_menu()}>
-      <img src="/images/user-image.svg" alt="Profile Image" class="round-image-padding w-8 h-8" />
-    </button>
-    <div
-      id="dropdown_menu"
-      class="dropdown-menu-arrow absolute right-0 mt-2 py-2 w-48 bg-emDark-dark rounded-lg shadow-xl border border-white"
-      hidden="true"
-      >
-      <%= if @current_user do %>
-        <.link
-          href={~p"/users/settings"}
-          class="menu-item border-b border-white border-opacity-50"
-          role="menuitem"
-          tabindex="-1"
-          method="get"
-          id="user-menu-item-0"
-        >
-          Singed in as <%= @current_user.email %>
-        </.link>
-        <.link
-          href="#"
-          class="menu-item"
-          role="menuitem"
-          tabindex="-1"
-          method="get"
-          id="user-menu-item-1"
-        >
-          Your gists
-        </.link>
-        <.link
-          href="#"
-          class="menu-item border-b border-white border-opacity-50"
-          role="menuitem"
-          tabindex="-1"
-          method="get"
-          id="user-menu-item-2"
-        >
-          Saved gists
-        </.link>
-        <.link
-          href={~p"/users/log_out"}
-          class="menu-item"
-          role="menuitem"
-          tabindex="-1"
-          method="delete"
-          id="user-menu-item-3"
-        >
-          Sing out
-        </.link>
-      <% else %>
-        <.link
-          href={~p"/users/log_in"}
-          class="menu-item border-b border-white border-opacity-50"
-          role="menuitem"
-          tabindex="-1"
-          method="get"
-          id="user-menu-item-0"
-        >
-          Sign in
-        </.link>
-        <.link
-          href={~p"/users/register"}
-          class="menu-item"
-          role="menuitem"
-          tabindex="-1"
-          method="get"
-          id="user-menu-item-1"
-        >
-          Register
-        </.link>
-      <% end %>
+<div class=" flex flex-col h-screen">
+  <header class="flex justify-center em-puurple">
+    <div class="max-w-7xl flex-grow flex justify-between items-center px-6 py-3 border-b border-header">
+      <div class="flex relative">
+        <a href={~p"/"}>
+          <img src="/images/balance.svg" alt="Balance Icon" class="h-9" />
+        </a>
+        <a href={~p"/"}>
+          <div class="text-white font-brand font-bold text-3xl">oliveiravictorp</div>
+        </a>
+      </div>
+      <div class="flex relative space-x-3">
+        <a href={~p"/"} class="mt-2 text-white text-[1rem] font-brand font-bold hover:text-emDark-light">
+          Home
+        </a>
+        <a href={~p"/about"} class="mt-2 text-white text-[1rem] font-brand font-bold hover:text-emDark-light">
+          Sobre mim
+        </a>
+        <a href={~p"/projects"} class="mt-2 text-white text-[1rem] font-brand font-bold hover:text-emDark-light">
+          Projetos
+        </a>
+        <a href={~p"/blog"} class="mt-2 text-white text-[1rem] font-brand font-bold hover:text-emDark-light">
+          Blog
+        </a>
+        <a href={~p"/freeMaterials"} class="mt-2 text-white text-[1rem] font-brand font-bold hover:text-emDark-light">
+          Materiais Gratuitos
+        </a>
+        <a href={~p"/studyHall"} class="mt-2 text-white text-[1rem] font-brand font-bold hover:text-emDark-light">
+          Sala de estudos
+        </a>
+        <a href={~p"/talkToMe"} class="mt-2 text-white text-[1rem] font-brand font-bold hover:text-emDark-light">
+          Fale comigo
+        </a>
+      </div>
+      <div class="flex relative space-x-3">
+        <button phx-click={JS.dispatch("toogle-darkmode")}>
+          <img src="/images/sun.svg" alt="Sun Icon" class="h-10" />
+        </button>
+        <input
+          type="text"
+          class="rounded-lg focus:outline-none focus:border-emLavender focus:ring-0 px-3 py-1 bg-emDark-dark placeholder-emDark-light text-white font-brand font-regular text-sm border-white"
+          placeholder="Search..."
+        />
+        <button class="img-down-arrow" type="button" id="user-menu-button" phx-click={LiveGistWeb.Layouts.App.toggle_dropdown_menu()}>
+          <img src="/images/user.svg" alt="Profile Icon" class="round-image-padding h-7" />
+        </button>
+        <div
+          id="dropdown_menu"
+          class="dropdown-menu-arrow absolute right-0 mt-11 py-2 bg-emDark-dark rounded-lg shadow-xl border border-white"
+          hidden="true"
+          >
+          <%= if @current_user do %>
+            <.link
+              href={~p"/users/settings"}
+              class="menu-item border-b border-white border-opacity-50"
+              role="menuitem"
+              tabindex="-1"
+              method="get"
+              id="user-menu-item-0"
+            >
+              Singed in as <%= @current_user.email %>
+            </.link>
+            <.link
+              href="#"
+              class="menu-item"
+              role="menuitem"
+              tabindex="-1"
+              method="get"
+              id="user-menu-item-1"
+            >
+              Your gists
+            </.link>
+            <.link
+              href="#"
+              class="menu-item border-b border-white border-opacity-50"
+              role="menuitem"
+              tabindex="-1"
+              method="get"
+              id="user-menu-item-2"
+            >
+              Saved gists
+            </.link>
+            <.link
+              href={~p"/users/log_out"}
+              class="menu-item"
+              role="menuitem"
+              tabindex="-1"
+              method="delete"
+              id="user-menu-item-3"
+            >
+              Sing out
+            </.link>
+          <% else %>
+            <.link
+              href={~p"/users/log_in"}
+              class="menu-item border-b border-white border-opacity-50"
+              role="menuitem"
+              tabindex="-1"
+              method="get"
+              id="user-menu-item-0"
+            >
+              Sign in
+            </.link>
+            <.link
+              href={~p"/users/register"}
+              class="menu-item"
+              role="menuitem"
+              tabindex="-1"
+              method="get"
+              id="user-menu-item-1"
+            >
+              Register
+            </.link>
+          <% end %>
+        </div>
+      </div>
     </div>
-  </div>
-</header>
-<main>
-<.flash_group flash={@flash} />
-<%= @inner_content %>
-</main>
-<footer class="h-[120px] w-full flex justify-center text-white px16 py-20 font-brand font-regular">
-  <div class="w-full px-10">
-    <div class="border-t-[1px] border-white w-full"></div>
-    <div class="flex items-center space-x-2 py-6">
-      <img src="/images/elixir-logo.svg" alt="Logo" class="h-8 w-8" />
-      <p>© 2023 oliveiravictorp</p>
-      <div class="text-emLavender-dark px-4 space-x-2">
+  </header>
+  <main class="flex-grow">
+    <div class="flex justify-center em-gradient">
+      <div class="max-w-7xl">
+        <.flash_group flash={@flash} />
+        <%= @inner_content %>
+      </div>
+    </div>
+  </main>
+  <footer class="flex justify-center text-white font-brand font-regular">
+    <div class="max-w-7xl flex-grow flex justify-between px-6 py-4 border-t-[1px] border-white">
+      <div class="flex items-center">
+        <img src="/images/balance.svg" alt="Balance Icon" class="h-7" />
+        <span><strong class="text-xl">oliveiravictorp</strong> © 2023</span>
+      </div>
+      <div class="flex items-center text-emLavender-dark space-x-2">
         <a href={~p"/"} class="hover:underline">Termos</a>
         <a href={~p"/"} class="hover:underline">Privacidade</a>
         <a href={~p"/"} class="hover:underline">Sobre</a>
       </div>
     </div>
-  </div>
-</footer>
+  </footer>
+</div>
