--- a/lib/oliveira_victor_p_web/live/about/about_live.html.heex
+++ b/lib/oliveira_victor_p_web/live/about/about_live.html.heex
@@ -1,4 +1,4 @@
 <.flash_group flash={@flash} />
-<div class="em-gradient flex items-center justify-center">
+<div class="flex items-center justify-center h-[220px]">
   <h1 class="font-brand font-bold text-3xl text-white">Minha trajetória</h1>
 </div>
