--- a/lib/oliveira_victor_p_web/components/layouts/app.html.heex
+++ b/lib/oliveira_victor_p_web/components/layouts/app.html.heex
@@ -1,15 +1,99 @@
 <div class=" flex flex-col h-screen">
-  <header class="flex justify-center em-puurple">
-    <div class="max-w-7xl flex-grow flex justify-between items-center px-6 py-3 border-b border-header">
-      <div class="flex relative">
-        <a href={~p"/"}>
-          <img src="/images/balance.svg" alt="Balance Icon" class="h-9" />
-        </a>
-        <a href={~p"/"}>
-          <div class="text-white font-brand font-bold text-3xl">oliveiravictorp</div>
-        </a>
+  <header class="flex justify-center bg-emPurple-dark">
+    <container class="max-w-7xl flex-grow px-6 py-3 border-b border-header">
+      <div class="flex justify-between items-center">
+        <logo class="flex relative">
+          <a href={~p"/"}>
+            <img src="/images/balance.svg" alt="Balance Icon" class="h-9" />
+          </a>
+          <a href={~p"/"}>
+            <div class="text-white font-brand font-bold text-3xl">oliveiravictorp</div>
+          </a>
+        </logo>
+        <sidenav class="flex relative space-x-3">
+          <button phx-click={JS.dispatch("toogle-darkmode")}>
+            <img src="/images/sun.svg" alt="Sun Icon" class="h-10" />
+          </button>
+          <input
+            type="text"
+            class="rounded-lg focus:outline-none focus:border-emLavender focus:ring-0 px-3 py-1 bg-emDark placeholder-emDark-white text-white font-brand font-regular text-sm border-white"
+            placeholder="Pesquisar..."
+          />
+          <button class="img-down-arrow" type="button" id="user-menu-button" phx-click={LiveGistWeb.Layouts.App.toggle_dropdown_menu()}>
+            <img src="/images/user.svg" alt="Profile Icon" class="round-image-padding h-7" />
+          </button>
+          <div
+            id="dropdown_menu"
+            class="dropdown-menu-arrow absolute right-0 mt-11 py-2 bg-emDark rounded-lg shadow-xl border border-white"
+            hidden="true"
+            >
+            <%= if @current_user do %>
+              <.link
+                href={~p"/users/settings"}
+                class="menu-item border-b border-white border-opacity-50"
+                role="menuitem"
+                tabindex="-1"
+                method="get"
+                id="user-menu-item-0"
+              >
+                Singed in as <%= @current_user.email %>
+              </.link>
+              <.link
+                href="#"
+                class="menu-item"
+                role="menuitem"
+                tabindex="-1"
+                method="get"
+                id="user-menu-item-1"
+              >
+                Your gists
+              </.link>
+              <.link
+                href="#"
+                class="menu-item border-b border-white border-opacity-50"
+                role="menuitem"
+                tabindex="-1"
+                method="get"
+                id="user-menu-item-2"
+              >
+                Saved gists
+              </.link>
+              <.link
+                href={~p"/users/log_out"}
+                class="menu-item"
+                role="menuitem"
+                tabindex="-1"
+                method="delete"
+                id="user-menu-item-3"
+              >
+                Sing out
+              </.link>
+            <% else %>
+              <.link
+                href={~p"/users/log_in"}
+                class="menu-item border-b border-white border-opacity-50"
+                role="menuitem"
+                tabindex="-1"
+                method="get"
+                id="user-menu-item-0"
+              >
+                Sign in
+              </.link>
+              <.link
+                href={~p"/users/register"}
+                class="menu-item"
+                role="menuitem"
+                tabindex="-1"
+                method="get"
+                id="user-menu-item-1"
+              >
+                Register
+              </.link>
+            <% end %>
+          </div>
+        </sidenav>
       </div>
-      <div class="flex relative space-x-3">
+      <nav class="flex relative space-x-3 pl-2">
         <a href={~p"/"} class="mt-2 text-white text-[1rem] font-brand font-bold hover:text-emDark-light">
           Home
         </a>
@@ -31,110 +115,28 @@
         <a href={~p"/talkToMe"} class="mt-2 text-white text-[1rem] font-brand font-bold hover:text-emDark-light">
           Fale comigo
         </a>
-      </div>
-      <div class="flex relative space-x-3">
-        <button phx-click={JS.dispatch("toogle-darkmode")}>
-          <img src="/images/sun.svg" alt="Sun Icon" class="h-10" />
-        </button>
-        <input
-          type="text"
-          class="rounded-lg focus:outline-none focus:border-emLavender focus:ring-0 px-3 py-1 bg-emDark-dark placeholder-emDark-light text-white font-brand font-regular text-sm border-white"
-          placeholder="Search..."
-        />
-        <button class="img-down-arrow" type="button" id="user-menu-button" phx-click={LiveGistWeb.Layouts.App.toggle_dropdown_menu()}>
-          <img src="/images/user.svg" alt="Profile Icon" class="round-image-padding h-7" />
-        </button>
-        <div
-          id="dropdown_menu"
-          class="dropdown-menu-arrow absolute right-0 mt-11 py-2 bg-emDark-dark rounded-lg shadow-xl border border-white"
-          hidden="true"
-          >
-          <%= if @current_user do %>
-            <.link
-              href={~p"/users/settings"}
-              class="menu-item border-b border-white border-opacity-50"
-              role="menuitem"
-              tabindex="-1"
-              method="get"
-              id="user-menu-item-0"
-            >
-              Singed in as <%= @current_user.email %>
-            </.link>
-            <.link
-              href="#"
-              class="menu-item"
-              role="menuitem"
-              tabindex="-1"
-              method="get"
-              id="user-menu-item-1"
-            >
-              Your gists
-            </.link>
-            <.link
-              href="#"
-              class="menu-item border-b border-white border-opacity-50"
-              role="menuitem"
-              tabindex="-1"
-              method="get"
-              id="user-menu-item-2"
-            >
-              Saved gists
-            </.link>
-            <.link
-              href={~p"/users/log_out"}
-              class="menu-item"
-              role="menuitem"
-              tabindex="-1"
-              method="delete"
-              id="user-menu-item-3"
-            >
-              Sing out
-            </.link>
-          <% else %>
-            <.link
-              href={~p"/users/log_in"}
-              class="menu-item border-b border-white border-opacity-50"
-              role="menuitem"
-              tabindex="-1"
-              method="get"
-              id="user-menu-item-0"
-            >
-              Sign in
-            </.link>
-            <.link
-              href={~p"/users/register"}
-              class="menu-item"
-              role="menuitem"
-              tabindex="-1"
-              method="get"
-              id="user-menu-item-1"
-            >
-              Register
-            </.link>
-          <% end %>
-        </div>
-      </div>
-    </div>
+      </nav>
+    </container>
   </header>
   <main class="flex-grow">
     <div class="flex justify-center em-gradient">
-      <div class="max-w-7xl">
+      <container class="max-w-7xl">
         <.flash_group flash={@flash} />
         <%= @inner_content %>
-      </div>
+      </container>
     </div>
   </main>
   <footer class="flex justify-center text-white font-brand font-regular">
-    <div class="max-w-7xl flex-grow flex justify-between px-6 py-4 border-t-[1px] border-white">
-      <div class="flex items-center">
+    <container class="max-w-7xl flex-grow flex justify-between px-6 py-4 border-t-[1px] border-white">
+      <copy class="flex items-center">
         <img src="/images/balance.svg" alt="Balance Icon" class="h-7" />
         <span><strong class="text-xl">oliveiravictorp</strong> © 2023</span>
-      </div>
-      <div class="flex items-center text-emLavender-dark space-x-2">
+      </copy>
+      <nav class="flex items-center text-emLavender-dark space-x-2">
         <a href={~p"/"} class="hover:underline">Termos</a>
         <a href={~p"/"} class="hover:underline">Privacidade</a>
         <a href={~p"/"} class="hover:underline">Sobre</a>
-      </div>
-    </div>
+      </nav>
+    </container>
   </footer>
 </div>
