--- a/lib/oliveira_victor_p_web/live/free_materials/free_materials_live.html.heex
+++ b/lib/oliveira_victor_p_web/live/free_materials/free_materials_live.html.heex
@@ -1,4 +1,4 @@
 <.flash_group flash={@flash} />
 <div class="flex items-center justify-center h-[220px]">
-  <h1 class="font-brand font-bold text-3xl text-white">Materiais gratuitos</h1>
+  <h1 class="font-brand font-bold text-lg sm:text-xl md:text-2xl text-white">Materiais gratuitos</h1>
 </div>
